syntax = "proto3";

package chat_project;

option java_multiple_files = true;
option java_package = "com.project.bonaventurajason";
option java_outer_classname = "GrpcProjectChat";



service ChatService{
    //rpc JoinChat(stream JoinArgument) returns (stream Response){}
    rpc Chatting(stream MessageChat) returns (stream MessageChat){}
    rpc JoinChat (JoinArgument) returns (Response){}
}

message JoinArgument{
    string username = 1;
    string peer = 2;
    string status = 3;

}

message Response{
    string status = 1;
}
message MessageChat{
    string message = 1;
    string username = 2;
    string peer = 3;
}
